...
        )
        contentStackView.addArrangedSubview(resultsStackView)
        actionContainer.addSubview(compareButton)

        compareButton.translatesAutoresizingMaskIntoConstraints = false
        compareButton.addTarget(self, action: #selector(didTapCompare), for: .primaryActionTriggered)
        compareButton.accessibilityIdentifier = "suggestions-view-comparison"
        compareButton.isEnabled = false

        NSLayoutConstraint.activate([
            scrollView.leadingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.leadingAnchor),
            scrollView.trailingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.trailingAnchor),
            scrollView.topAnchor.constraint(equalTo: view.safeAreaLayoutGuide.topAnchor),
...
